# wcl-deaths

./: .gitignore  Cargo.toml  README.md  config.toml
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ReportForm.tsx  ResultsTable.tsx
src/: api.rs  client.rs  config.rs  main.rs  model.rs  state.rs
src/queries/: mod.rs
